added basics for properties

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="start">Start:</string>
-    <string name="end">End:</string>
-    <string name="frequency">Frequency:</string>
-    <string name="made_date">Registered date:</string>
-    <string name="subContracts">Payments:</string>
-    <string name="cancel">Cancel</string>
-    <string name="out">Rent</string>
-    <string name="duration">Duration</string>
-    <string name="payments_left">Payments left:</string>
+    <string name="start">Inicio:</string>
+    <string name="end">Final:</string>
+    <string name="frequency">Frecuencia:</string>
+    <string name="made_date">Fecha de registro:</string>
+    <string name="subContracts">Pagos:</string>
+    <string name="cancel">Cancelar</string>
+    <string name="out">Egresos</string>
+    <string name="duration">"Duración "</string>
+    <string name="payments_left">"Pagos restantes: "</string>
     <string name="next_payment">Next subContract:</string>
-    <string name="please_fill_in_duration">Please fill in duration</string>
-    <string name="select_frequency">Please select frequency</string>
+    <string name="please_fill_in_duration">"Por favor indica la duración "</string>
+    <string name="select_frequency">"Favor de seleccionar la frecuencia "</string>
     <string name="number_of_payments">Number of subContracts</string>
-    <string name="date_before_error">Date chosen is before today</string>
-    <string name="scheduled_transaction">Scheduled Transaction</string>
-    <string name="select_a_transaction">Select a Transaction</string>
+    <string name="date_before_error">Fecha seleccionada no es válida.</string>
+    <string name="scheduled_transaction">"Transacción futura "</string>
+    <string name="select_a_transaction">"Elige una transacción "</string>
     <string name="increase_amount_paid">Increase amount paid</string>
     <string name="warning_amount_paid_will_be_larger_than_amount_to_pay">Warning! Amount paid will be larger than amount to pay.</string>
     <string name="execute_scheduled_transaction">Execute Scheduled Transaction</string>
@@ -33,4 +33,91 @@
         <item>November</item>
         <item>December</item>
     </string-array>
+    <string name="minutes_ago">Hace unos minutos</string>
+    <string name="askForPermission">Favor, de pedir autorización para aceder</string>
+    <string name="askForValidCompanyId">"Por favor, ingrese un ID válido de la compañia "</string>
+    <string name="noCompanyIdTyped">"Por favor, ingrese un ID válido de la compañia "</string>
+    <string name="accounts">Cuentas</string>
+    <string name="select_a_stakeholder">"Elegir un participante "</string>
+    <string name="error_finding_microAccount">"Error encontranto un participante "</string>
+    <string name="select_micro_account">"Elige a un participante "</string>
+    <string name="search">Buscar</string>
+    <string name="micro_accounts">Participantes</string>
+    <string name="transaction_display">Mostrar Transacción</string>
+    <string name="account">Cuenta:</string>
+    <string name="add_account">Añadir una cuenta</string>
+    <string name="name_of_account">Nombre de la cuenta</string>
+    <string name="starting_balance">"Caja inicial  ( Por defecto $0.00 ) "</string>
+    <string name="paid_to">"Pagado a "</string>
+    <string name="title">Título</string>
+    <string name="no_transactions">No hay transacciones que mostrar</string>
+    <string name="in">Ingresos</string>
+    <string name="words_">Palabras:</string>
+    <string name="choose_category">"Elige una categoría "</string>
+    <string name="no_category">"Sin categoría "</string>
+    <string name="default_categories">"Categorías por defecto "</string>
+    <string name="custom_categories">Categorías personalizadas</string>
+    <string name="edit_categories">"Editar Categorías "</string>
+    <string name="add_new_category">Añadir nueva categoría</string>
+    <string name="custom_category">Categorías personalizadas</string>
+    <string name="category_name">"Nombre de la categoría "</string>
+    <string name="category_icon">"Emoji de la categoría "</string>
+    <string name="invalid_icon_please_enter_an_emoji">Icono invalido, favor de elegir un emoji.</string>
+    <string name="this_field_is_requiered">Este campo es mandatorio.</string>
+    <string name="editing_custom_category">"Editando Categoría "</string>
+    <string name="add_new_cat">"Añadir categoría "</string>
+    <string name="dismiss">Cancelar</string>
+    <string name="not_recorded">"No registrado "</string>
+    <string name="balance">Balance de caja</string>
+    <string name="error_loading">Error cargando ...</string>
+    <string name="add_custom_category">"Añadir categoría personalizada "</string>
+    <string name="time">"Hora: "</string>
+    <string name="date">"Día: "</string>
+    <string name="select_starting_date">Por favor indica el día de inicio.</string>
+    <string name="every">Todos</string>
+    <string name="camara_permission_denied">Favor de otorgar perimiso al applicación de usar la cámara.</string>
+    <string name="upload_failed">"El archivo fallo en guardarse. "</string>
+    <string name="image_uploaded">Imagen guardada</string>
+    <string name="select_from_gallery">"Elegir de la Galería "</string>
+    <string name="take_a_picture">"Tomar una foto "</string>
+    <string name="add_an_image">"Añadir una imagen "</string>
+    <string name="photo_captured">"Foto tomada "</string>
+    <string name="Transaction_upload_failed">"La transacción no se pudo guardar, favor de intentar de nuevo. "</string>
+    <string name="stakeholders">"Participantes "</string>
+    <string name="image_captured">"Imagen "</string>
+    <string name="summary">Resumen</string>
+    <string name="stakeholdersPlural">Participantes</string>
+    <string name="month">Mes</string>
+    <string name="year">Año</string>
+    <string name="receivables">Cuentas por cobrar</string>
+    <string name="payables">Cuentas por pagar</string>
+    <string name="late">Tarde</string>
+    <string name="future">Futuro</string>
+    <string name="completed">Completado</string>
+    <string name="deleted_transactions">"Eliminar transacción "</string>
+    <string name="Accounts_participants">"Participantes "</string>
+    <string name="starting_balanace_title">"Caja inicial "</string>
+    <string name="name_of_account_title">"Nombre de la cuneta: "</string>
+    <string name="new_participant_s_email">Email del nuevo participante...</string>
+    <string name="add">Añadir</string>
+    <string name="account_settings">"Ajuste de la Cuenta "</string>
+    <string name="please_insert_a_valid_email">Por favor, use un correo válido.</string>
+    <string name="confirm_email">Confirmar correo</string>
+    <string name="add_email_question">¿Deseas agreagar este correo a la cuenta?</string>
+    <string name="yes">Confirmar</string>
+    <string name="no">Cancelar</string>
+    <string name="toast_for_wrong_input_from_owner">"Por favor elegir a otro admin. Antes de editar al admin. actual. "</string>
+    <string name="no_owner_rights">Favor de contactar al admin. para hacer cambios.</string>
+    <string name="confirm_change_owner">"Confirmar el cambio del admin. "</string>
+    <string name="new_owner_1">¿Confirmas lo siguiente:?</string>
+    <string name="new_owner2">¿Deseas añadirlo como admin. de la cuenta?</string>
+    <string name="delete_user2">¿Deseas eliminarlo?</string>
+    <string name="new_stake">"Añadir a un participante "</string>
+    <string name="Also_consider_for">"Clasificación"</string>
+    <string name="properties">Inmuebles</string>
+    <string name="add_new_property">Añadir nuevo inmueble</string>
+    <string name="warning_new_properties">Es necesario escribir un nombre para la nueva propiedad</string>
+    <string name="property">Inmueble</string>
+    <string name="none">Ninguno</string>
+    <string name="Property_to_match">Inmueble</string>
 </resources>
