--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="start">Inicio:</string>
+    <string name="start">Fecha de inicio:</string>
     <string name="end">Final:</string>
-    <string name="frequency">Frecuencia:</string>
+    <string name="frequency">Repetir:</string>
     <string name="made_date">Fecha de registro:</string>
     <string name="subContracts">Pagos:</string>
     <string name="cancel">Cancelar</string>
     <string name="out">Egresos</string>
-    <string name="duration">"Duración "</string>
+    <string name="duration">"Número de repeticiones "</string>
     <string name="payments_left">"Pagos restantes: "</string>
     <string name="next_payment">Next subContract:</string>
     <string name="please_fill_in_duration">"Por favor indica la duración "</string>
@@ -89,8 +89,8 @@
     <string name="stakeholdersPlural">Participantes</string>
     <string name="month">Mes</string>
     <string name="year">Año</string>
-    <string name="receivables">Cuentas por cobrar</string>
-    <string name="payables">Cuentas por pagar</string>
+    <string name="receivables">Por cobrar</string>
+    <string name="payables">Por pagar</string>
     <string name="late">Tarde</string>
     <string name="future">Futuro</string>
     <string name="completed">Completado</string>
@@ -120,4 +120,145 @@
     <string name="property">Inmueble</string>
     <string name="none">Ninguno</string>
     <string name="Property_to_match">Inmueble</string>
+    <string name="cash_at_the_end">Efectivo disponible</string>
+    <string name="sum_of_cash_out">Egresos</string>
+    <string name="selected_period">"Periodo "</string>
+    <string name="cash_in_the_beginning">Efectivo inicial</string>
+    <string name="sum_of_cash_in">Ingresos</string>
+    <string name="sum_of_receivables">Cuentas por cobrar</string>
+    <string name="sum_of_payables">"Cuentas por pagar "</string>
+    <string name="equity">Patrimonio</string>
+    <string name="Transaction_new">Nueva Transacción</string>
+    <string name="Transaction_filter"> Filtro Transacciones </string>
+    <string name="app_name">elContador</string>
+    <string name="new_transaction_title">Nueva Transacción</string>
+    <string name="receive">Recibe</string>
+    <string name="amount">Monto</string>
+    <string name="paid_by"> Pagado por</string>
+    <string name="comments">Notas</string>
+    <string name="comments_hint">Notas</string>
+    <string name="submit">Ingresar</string>
+    <string name="cash_out">Egreso</string>
+    <string name="cash_in">Ingreso</string>
+    <string name="tenants">Arrendatorios</string>
+    <string name="employees">Empleados</string>
+    <string name="shops_storage">Stores Storage</string>
+    <string name="home">Inicio</string>
+    <string name="transactions">Transactions</string>
+    <string name="homepage_title">%1$s, %2$s!</string>
+    <string name="settings">Ajustes</string>
+    <string name="filter_transactions">Filtro Transacciones</string>
+    <string-array name="category_items">
+        <item>Others</item>
+        <item>Rent</item>
+        <item>Salary</item>
+        <item>Toilets</item>
+        <item>Purchases</item>
+        <item>Deposits</item>
+    </string-array>
+
+    <string-array name="rent_subcategory_items">
+        <item>Subcategory</item>
+        <item>Rent</item>
+        <item>Deposit</item>
+        <item>Maintenance</item>
+        <item>Reimbursement</item>
+    </string-array>
+    <string-array name="salary_subcategory_items">
+        <item>Subcategory</item>
+        <item>Weekly</item>
+        <item>Fortnightly</item>
+        <item>Commission</item>
+    </string-array>
+    <string-array name="toilets_subcategory_items">
+        <item>Subcategory</item>
+        <item>Entrance Fee</item>
+        <item>Paper</item>
+        <item>Towels</item>
+    </string-array>
+    <string-array name="purchases_subcategory_items">
+        <item>Subcategory</item>
+        <item>Construction Materials</item>
+        <item>Supplies</item>
+        <item>Rubbish</item>
+    </string-array>
+    <string-array name="deposits_subcategory_items">
+        <item>Subcategory</item>
+        <item>Cash from company</item>
+        <item>Cash for company</item>
+    </string-array>
+    <string name="log_out"> Cerrar Sesión</string>
+    <string name="new_transaction">Nueva Transacción</string>
+    <string name="edit">Editar</string>
+    <string name="close">Cerrar</string>
+    <string name="confirm">Confirmar</string>
+    <string name="filter">Filtrar</string>
+    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
+    <string name="pay_to">Pagar a</string>
+    <string name="stakeholder"> Participante </string>
+    <string name="additional_comments">Comentarios adicionales</string>
+    <string name="select_a_category">Elige una categoria</string>
+    <string name="select_a_sub_category">Elige una sub-categoria</string>
+    <string name="register_log_in">Registrar un nuevo usuario</string>
+    <string name="change_password">Cambiar contraseña</string>
+    <string name="budget">Presuesto: $%1$.2f</string>
+    <string name="subtotal">Subtotal: $%1$.2f</string>
+    <string name="zero_amount">Por favor, ingresa una cantidad.</string>
+    <string name="choose_picture">Elige una foto</string>
+    <string name="delete">Borrar</string>
+    <string name="change_pic">Cambiar foto</string>
+    <string name="all_stakeholders">Todo</string>
+    <string name="select_stakeholder">Elige un participante</string>
+    <string name="username">Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="log_in">Ingresar</string>
+    <string name="textview">TextView</string>
+    <string name="role">Rol:</string>
+    <string name="phone_number">Numero telefónico:</string>
+    <string name="email">Email:</string>
+    <string name="name">Nombre:</string>
+    <string name="first_name">Nombre</string>
+    <string name="last_name">Apellido</string>
+    <string name="roles">Roles</string>
+    <string name="made_by">Realizado por:</string>
+    <string name="concerning">Tercero:</string>
+    <string name="category">Categoria:</string>
+    <string name="subcategory">Sub categoria:</string>
+    <string name="date_and_time">Fecha y hora:</string>
+    <string name="notes">Notas:</string>
+    <string name="to_date">Del</string>
+    <string name="From_date">Al</string>
+    <string name="clear">Borrar</string>
+    <string name="from_display">De</string>
+    <string name="for_display">Para</string>
+    <string name="few_moments_ago">Hace unos momentos...</string>
+    <string name="yesterday_at">"Ayer a las "</string>
+    <string name="role_display"> Role: </string>
+    <string name="has_deposited_updated">"ha depositado "</string>
+    <string-array name="roles">
+        <item>Empleado</item>
+        <item>Administrador</item>
+        <item>Jefe</item>
+        <item>Arrendador</item>
+    </string-array>
+    <string name="server_client_id">"345966862315-cdfn2l56h55tqr1c1fbhvj668vpl0t00.apps.googleusercontent.com"</string>
+    <string name="succesful_registration">El usuario ha sido registrado, contacte al administrador para poder accesar</string>
+    <string name="unsuccesful_registration">No se ha podido registrar al usuario</string>
+    <string name="Access_denied">Acceso denegado para </string>
+    <string-array name="type_of_cash_transaction">
+        <item>Otros</item>
+        <item>Cuenta por pagar</item>
+        <item>Cuenta por cobrar</item>
+    </string-array>
+    <string-array name="frequency">
+        <item>Una vez</item>
+        <item>Diario</item>
+        <item>Semanalmente </item>
+        <item>Cada dos Semanas</item>
+        <item>Mensualmente</item>
+        <item>Anualmente</item>
+    </string-array>
+    <string name="future_dates">Fechas de las futuras transacciones:</string>
+    <string name="add_transaction">Añadir Transacción</string>
+    <string name="add_future_transaction">Añadir Transacción Futura</string>
 </resources>
