--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -144,7 +144,7 @@
     <string name="employees">Empleados</string>
     <string name="shops_storage">Stores Storage</string>
     <string name="home">Inicio</string>
-    <string name="transactions">Transactions</string>
+    <string name="transactions">Transacciones</string>
     <string name="homepage_title">%1$s, %2$s!</string>
     <string name="settings">Ajustes</string>
     <string name="filter_transactions">Filtro Transacciones</string>
@@ -264,6 +264,7 @@
     <string name="new_future_transaction">Nueva Transacción futura</string>
     <string name="add_title">Añade un titulo</string>
     <string name="choose">Elegir</string>
-    <string name="receivable_of">"c.p.cobrar: "</string>
-    <string name="payable_of">c.p.pagar: </string>
+    <string name="receivable_of">"por cobrar: "</string>
+    <string name="payable_of">por pagar: </string>
+    <string name="balance_stake">"Balance: "</string>
 </resources>
