--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,7 +200,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Transaction_upload_failed">Transaction upload failed, please register the transaction again.</string>
-    <string name="stakeholders">Stakeholder</string>
+    <string name="stakeholders">Stakeholders</string>
     <string name="image_captured">Image Captured</string>
     <string name="summary">Summary</string>
     <string name="properties">Properties</string>
@@ -311,5 +311,7 @@
     <string name="category_excel">Category</string>
     <string name="registered_by">Registered by</string>
     <string name="notes_excel">Notes</string>
+    <string name="equity_excel">Equity</string>
+    <string name="cash">Cash</string>
 
 </resources>
