Update Summary of Stakeholders and fix loading of future transactions

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -266,6 +266,14 @@
     <string name="choose">Elegir</string>
     <string name="receivable_of">"por cobrar a "</string>
     <string name="payable_of">por pagara </string>
-    <string name="balance_stake">"Balance: "</string>
+    <string name="balance_stake">"Balance "</string>
     <string name="f_transaction_for">T. futura para</string>
+    <string name="sum_of_this_month_transactions">Efectivo recibido</string>
+    <string name="receivables_in_the_beginning">Por cobrar inicial</string>
+    <string name="payables_in_the_beginning">Por pagar inicial</string>
+    <string name="montly_summary_stake">Resumen Mensual</string>
+    <string name="not_delete_past_transactions">La transacción fue registrada en un mes anterior, por lo que no puede ser eliminada.</string>
+    <string name="delete_transaction">Eliminar Transacción</string>
+    <string name="sure_delete_transaction">¿Seguro que quieres eleminar la transacción?</string>
+    <string name="cannot_open_is_deleted">La transacción seleccionada esta eliminada. No se pueden ver los detalles.</string>
 </resources>
