--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,7 +294,7 @@
     <string name="sum_of_this_month_transactions">Sum of this month transactions</string>
     <string name="receivables_in_the_beginning">Receivables(In the beginning)</string>
     <string name="payables_in_the_beginning">Payables in the beginning</string>
-    <string name="montly_summary_stake">Montly Summary</string>
+    <string name="monthly_summary_stake">Monthly Summary</string>
     <string name="not_delete_past_transactions">The transaction belongs to a previous month, so it is not possible to delete it.</string>
     <string name="delete_transaction">Delete transaction</string>
     <string name="sure_delete_transaction">Are you sure you want to delete this transaction?</string>
@@ -327,5 +327,6 @@
     <string name="notes_excel">Notes</string>
     <string name="equity_excel">Equity</string>
     <string name="cash">Cash</string>
+    <string name="type">Type:</string>
 
 </resources>
