--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,7 +220,7 @@
     <string name="amount_left">Amount left: </string>
     <string name="increase_amount_paid">Increase amount paid</string>
     <string name="warning_amount_paid_will_be_larger_than_amount_to_pay">Warning! Amount paid will be larger than amount to pay.</string>
-    <string name="execute_scheduled_transaction">Execute Scheduled Transaction</string>
+    <string name="execute_pending_transaction">Execute Pending Transaction</string>
     <string name="input_amount_to_pay">Please input the amount to pay.</string>
     <string name="fully_paid">This transaction is fully paid.</string>
     <string name="check_errors">Please check for errors.</string>
@@ -330,5 +330,10 @@
     <string name="type">Type:</string>
     <string name="deleted_by">Deleted by:</string>
     <string name="deleted_date">Deleted date:</string>
+    <string name="sure_execute_transaction">Are you sure you want to execute this transaction?</string>
+    <string name="transaction_deleted">Transaction deleted.</string>
+    <string name="transaction_executed">Transaction executed</string>
+    <string name="failed_delete_transaction">Failed to delete transaction.</string>
+    <string name="failed_execute_transaction">Failed execute transaction</string>
 
 </resources>
