--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,5 +337,6 @@
     <string name="failed_execute_transaction">Failed execute transaction</string>
     <string name="description">Description:</string>
     <string name="no_future">No future transactions here.</string>
+    <string name="reason_to_delete">Reason to delete:</string>
 
 </resources>
