--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -338,5 +338,10 @@
     <string name="description">Description:</string>
     <string name="no_future">No future transactions here.</string>
     <string name="reason_to_delete">Reason to delete:</string>
+    <string name="delete_stakeholder_message">Are you sure you want to delete this stakeholder?</string>
+    <string name="delete_stakeholder_title">Delete stakeholder</string>
+    <string name="not_enough_permission_delete">You don\'t have the permission to delete.</string>
+    <string name="stakeholder_deleted">Stakeholder deleted.</string>
+    <string name="stakeholder_delete_fail">Failed to delete stakeholder.</string>
 
 </resources>
