--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -301,8 +301,8 @@
     <string name="cannot_open_is_deleted">This transaction is deleted. The details cannot be displayed</string>
     <string-array name="type_of_cash_transaction">
         <item>Any</item>
-        <item>Receivables</item>
         <item>Payables</item>
+        <item>Receivables</item>
     </string-array>
     <string-array name="type_of_transaction">
         <item>CASH</item>
@@ -343,5 +343,8 @@
     <string name="not_enough_permission_delete">You don\'t have the permission to delete.</string>
     <string name="stakeholder_deleted">Stakeholder deleted.</string>
     <string name="stakeholder_delete_fail">Failed to delete stakeholder.</string>
+    <string name="must_choose_ategory">You must choose a category</string>
+    <string name="delete_category">Delete Category</string>
+    <string name="are_you_sure_delete_category">Are you sure you want to delete this category?</string>
 
 </resources>
