--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -346,5 +346,6 @@
     <string name="must_choose_ategory">You must choose a category</string>
     <string name="delete_category">Delete Category</string>
     <string name="are_you_sure_delete_category">Are you sure you want to delete this category?</string>
+    <string name="stakeholder_settings">Stakeholder\'s settings</string>
 
 </resources>
