--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -322,7 +322,7 @@
     <string name="are_you_sure_delete_category">Favor de confirmar si desea eliminar la categoría</string>
     <string name="stakeholder_settings">Ajustes del participante</string>
     <string name="edit_property">Editar Propiedades</string>
-    <string name="summary_of">Resumen de %1$s</string>
+    <string name="summary_of">Resumen de %1$s de %1$2</string>
     <string name="exported_by">Exportado por %1$s a las %2$s</string>
     <string name="date_and_time_excel">"Date &amp; Hora "</string>
 </resources>
