--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -311,7 +311,7 @@
     </string-array>
 
     <string name="export_prompt">Export the current month?\n%1$s %2$d</string>
-    <string name="summary_of">Summary of %1$s</string>
+    <string name="summary_of">Summary of %1$s in %2$s</string>
     <string name="exported_by">Exported by %1$s at %2$s</string>
     <string name="file_ready">File ready</string>
     <string name="send">Send</string>
