--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -348,5 +348,9 @@
     <string name="delete_category">Delete Category</string>
     <string name="are_you_sure_delete_category">Are you sure you want to delete this category?</string>
     <string name="stakeholder_settings">Stakeholder\'s settings</string>
+    <string name="delete_property_title">Delete property</string>
+    <string name="delete_property_message">Are you sure you want to delete this property?</string>
+    <string name="property_delete_fail">Failed to delete property.</string>
+    <string name="property_deleted">Property deleted.</string>
 
 </resources>
