Search property through its stakeholder and search vacant properties

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -352,5 +352,6 @@
     <string name="delete_property_message">Are you sure you want to delete this property?</string>
     <string name="property_delete_fail">Failed to delete property.</string>
     <string name="property_deleted">Property deleted.</string>
+    <string name="vacant">Vacant</string>
 
 </resources>
