--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,5 +353,11 @@
     <string name="property_delete_fail">Failed to delete property.</string>
     <string name="property_deleted">Property deleted.</string>
     <string name="vacant">Vacant</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="delete_account_prompt">Are you sure you want to delete this account? To confirm, please write the account name, %1$s, below.</string>
+    <string name="delete_account_fail_mismatch">Account name does not match</string>
+    <string name="delete_accout_last_warning">Are you sure you want to delete %1$s? This action cannot be undone.</string>
+    <string name="account_deleted">Account deleted.</string>
+    <string name="delete_account_fail">Failed to delete account.</string>
 
 </resources>
