--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,8 +287,8 @@
     <string name="add_future_transaction">Add future transaction</string>
     <string name="new_future_transaction">New Future Transaction</string>
     <string name="choose">Choose</string>
-    <string name="receivable_of">\"Rec. of \"</string>
-    <string name="payable_of">Pay. of</string>
+    <string name="receivable_of">Receivable of </string>
+    <string name="payable_of">Payable of</string>
     <string name="balance_stake">Balance:</string>
     <string name="f_transaction_for">\"Future transaction for \"</string>
     <string name="sum_of_this_month_transactions">Sum of this month transactions</string>
