Included property details on all recViews and adapted PropertiesList to handle all situations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,5 +365,6 @@
     <string name="image_upload">Failed to upload image</string>
     <string name="no_property">No property</string>
     <string name="no_stakeholder">No Stakeholder</string>
+    <string name="choose_property">Choose Property</string>
 
 </resources>
